exports[`Textarea component snapshot renders basic required data 1`] = `
<div>
  <label
    htmlFor="email">
    <textarea
      id="email"
      name="email"
      value="" />
  </label>
</div>
`;

exports[`Textarea component snapshot renders extra info and it is active and invalid 1`] = `
<div>
  <label
    htmlFor="email">
    Email
    <textarea
      id="email"
      maxLength="1000"
      name="email"
      placeholder="Email"
      type="email"
      value="notAnEmail" />
  </label>
</div>
`;

exports[`Textarea component snapshot renders label and input is invalid 1`] = `
<div>
  <label
    htmlFor="email">
    Email
    <textarea
      id="email"
      name="email"
      value="notAnEmail" />
  </label>
  <p>
    Input is invalid
  </p>
</div>
`;

exports[`Textarea component snapshot renders label and input is required 1`] = `
<div>
  <label
    htmlFor="email">
    Email
    <textarea
      id="email"
      name="email"
      value="" />
  </label>
  <p>
    Input required
  </p>
</div>
`;

exports[`Textarea component snapshot renders label and is focused 1`] = `
<div>
  <label
    htmlFor="email">
    Email
    <textarea
      id="email"
      name="email"
      value="test@email.com" />
  </label>
</div>
`;
